# mongometer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mongometer/: __init__.py  aggregation.py  executor.py
tests/: test_mongometer.py
