[tool.poetry]
name = "mongometer"
version = "0.1.0"
description = "MongoDB aggregation pipeline performance checker"
authors = ["Roman <roman-right@protonmail.com>"]
license = "MIT"
repository = "https://github.com/roman-right/mongometer"
keywords = ["mongodb", "python"]
include = [
    "LICENSE",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pymongo = "^4.1.1"
rich = "^12.4.4"
click = "^8.1.3"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
mongometer = "mongometer.executor:measure"